# Projekt_SDiZO_zad2

./: CMakeLists.txt  StreamsHandling.h  main.cpp
OperationsOnStructures/: ArraysOperations.h  ListOperations.h  QueueOperations.h  StackOperations.h  TreeOperations.cpp  TreeOperations.h
OperationsOnStructures/List/: SortOperations.cpp
OperationsOnStructures/OperationsOnTrees/: SortOperations.cpp  SortOperations.h
OperationsOnStructures/Trees/: SortOperations.h
StreamHandliing/: Streams.cpp
Structures/List/: List.cpp  List.h
Structures/Queue/: Queue.h
Structures/ResultsByRow/: ResultsByRow.cpp  ResultsByRow.h
Structures/Stack/: Stack.h
Structures/Trees/AvlTree/: AvlTree.cpp  AvlTree.h
Structures/Trees/BST/: BST.cpp  BST.h
Structures/Trees/BinaryTree/: BinaryTree.cpp  BinaryTree.h
